<resources>
    <string name="app_name">Note</string>
    <string name="txt_main_page_title">Hello, My Note</string>
    <string name="setting_icon">Setting icon</string>
    <string name="search_bar_hint">Search here</string>
    <string name="delete_icon">Delete_icon</string>
    <string name="lorem_ipsum">Lorem ipsum odor amet, consectetuer adipiscing elit. Fermentum vel iaculis interdum praesent; congue felis. Hendrerit sit conubia sapien sollicitudin, parturient faucibus sociosqu phasellus. Ullamcorper lorem duis erat nascetur ad, consectetur ultricies. Litora lobortis cursus venenatis facilisis efficitur purus. Congue condimentum convallis turpis quam risus velit. Vitae amet in dapibus leo augue. Ullamcorper lacus euismod luctus cubilia montes accumsan vel curabitur. At urna viverra torquent nulla taciti auctor fames scelerisque ad. Euismod dolor pulvinar vehicula efficitur bibendum tempus fringilla ugue. Ullamcorper lacus euismod luctus cubilia montes accumsan vel curabitur. At urna viverra torquent nulla taciti auctor fames scelerisque ad. Euismod dolor pulvinar vehicula efficitur bibendum tempus fringilla.
    </string>
    <string name="add_note">Add_note</string>
    <string name="navigationDrawer_icon">NavigationDrawer_icon</string>
    <string name="back_icon">Back_icon</string>
    <string name="archive_icon">Archive_icon</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="assumed_data">Edited 28 May, 2024</string>
    <string name="pin_icon">Pin_icon</string>
    <string name="arrow_up_icon">Arrow_up_icon</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="notes">Notes</string>
    <string name="trash">Trash</string>
    <string name="archive">Archive</string>
    <string name="setting">Setting</string>
    <string name="about_app">About App</string>
    <string name="restore_all">Restore All</string>
    <string name="delete_all">Delete All</string>
    <string name="unarchive_all">Unarchive All</string>
    <string name="app_description">Note is a simple yet powerful note-taking app designed to help you capture your thoughts, ideas, and reminders. Whether you\'re a student, a professional, or simply someone who wants to stay organized, Notely is the perfect tool for you.</string>
    <string name="github_repository">GitHub Repository:</string>
    <string name="github_link_repository">https://github.com/AliHabibiAndroidProgramPilot/Note</string>
</resources>