<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:elevation="15dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" >

        <TextView
            android:text="@string/about_app"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:text="@string/app_description"
        android:textSize="20sp"
        android:gravity="start"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <TextView
        android:text="@string/github_repository"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="13sp"
        android:text="@string/github_link_repository"
        android:autoLink="web" />

</LinearLayout>