<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/md_theme_cardView_background"
    android:padding="16dp"
    android:layout_marginStart="3dp"
    android:layout_marginEnd="3dp"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/second_root"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent" >

        <TextView
            android:id="@+id/txt_noteDate"
            tools:text="28 September"
            android:textStyle="italic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/icDeleteAll"
            android:textSize="16sp"
            android:maxWidth="250dp"
            android:gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/icDeleteAll"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/txt_noteDate"
            android:layout_alignTop="@+id/txt_noteDate"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/delete_all"
            android:src="@drawable/ic_delete_forever" />

        <ImageButton
            android:id="@+id/icRestoreAll"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/restore_all"
            app:layout_constraintEnd_toEndOf="@+id/txt_noteDate"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_restore" />

        <TextView
            android:id="@+id/txt_NoteTitle"
            tools:text="Note Title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_NoteText"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/txt_noteDate"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_NoteText"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_NoteTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp"
            tools:text="@string/lorem_ipsum"
            android:gravity="start"
            android:ellipsize="end"
            android:maxLines="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>